静态文件浏览器缓存问题

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=847a64ba1b1ffa376472",
+    "/css/app.css": "/css/app.css?id=7eb732cdd038ed84b338"
 }
